--- a/MC2-Group6/Feature/TaskDetails/Test View/Cell/TagsCell/TagsCollectionView/TagsTaskDetailsCollectionViewCell.xib
+++ b/MC2-Group6/Feature/TaskDetails/Test View/Cell/TagsCell/TagsCollectionView/TagsTaskDetailsCollectionViewCell.xib
@@ -10,17 +10,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TagsTaskDetailsCollectionViewCell" id="gTV-IL-0wX" customClass="TagsTaskDetailsCollectionViewCell" customModule="MC2_Group6" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="70" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="70" height="30"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="70" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="70" height="30"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6RL-3I-qWd">
-                        <rect key="frame" x="0.0" y="0.0" width="70" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="70" height="30"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aEq-4L-frD">
-                                <rect key="frame" x="14" y="1" width="42" height="43"/>
+                                <rect key="frame" x="14" y="1" width="42" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -45,11 +45,11 @@
                 <constraint firstItem="6RL-3I-qWd" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="jdv-Z9-jGf"/>
                 <constraint firstItem="6RL-3I-qWd" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="wOk-7X-hZf"/>
             </constraints>
-            <size key="customSize" width="70" height="44"/>
+            <size key="customSize" width="70" height="30"/>
             <connections>
                 <outlet property="tagLabel" destination="aEq-4L-frD" id="fhJ-XP-JTO"/>
             </connections>
-            <point key="canvasLocation" x="134.78260869565219" y="89.732142857142847"/>
+            <point key="canvasLocation" x="134.78260869565219" y="84.375"/>
         </collectionViewCell>
     </objects>
 </document>
