--- a/MC2-Group6/Feature/TaskDetails/Edit Task/View/EditTask.storyboard
+++ b/MC2-Group6/Feature/TaskDetails/Edit Task/View/EditTask.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HZY-uu-yLG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yHt-Dl-8SP">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -79,16 +79,56 @@
             </objects>
             <point key="canvasLocation" x="1680" y="-937"/>
         </scene>
-        <!--Edit Task View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="WAR-SO-jmb">
+            <objects>
+                <navigationController id="yHt-Dl-8SP" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KfR-0K-QAd">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="HZY-uu-yLG" kind="relationship" relationship="rootViewController" id="Eom-mQ-wbd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Ur-SZ-LHC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-104" y="-908"/>
+        </scene>
+        <!--Edit Task-->
         <scene sceneID="bKA-Dt-BpL">
             <objects>
-                <viewController id="HZY-uu-yLG" customClass="EditTaskViewController" customModule="MC2_Group6" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TaskPageViewController" id="HZY-uu-yLG" customClass="EditTaskViewController" customModule="MC2_Group6" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gEg-ut-a4c">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="wza-vi-upi"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Edit Task" id="2Ie-X8-eXb">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="HVr-Ak-s0W">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="wgL-GY-GZo">
+                                <rect key="frame" x="20" y="5" width="92" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="chevron.left" catalog="system"/>
+                                <connections>
+                                    <action selector="backButtonPressed:" destination="HZY-uu-yLG" eventType="touchUpInside" id="EWr-Ez-J3s"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="jIn-Qc-8yZ">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Y1B-d7-hci">
+                                <rect key="frame" x="302" y="5" width="92" height="34.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Done"/>
+                                <connections>
+                                    <action selector="doneButton:" destination="HZY-uu-yLG" eventType="touchUpInside" id="taQ-hO-IfU"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <segue destination="Sl2-eM-Chj" kind="presentation" identifier="toAddTagsFromEdit" id="RJa-LT-RCp"/>
                     </connections>
