change tab bar & back btn color on setting

--- a/MC2-Group6/Feature/TabBar/TabBar.storyboard
+++ b/MC2-Group6/Feature/TabBar/TabBar.storyboard
@@ -15,6 +15,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.89803922179999995" green="0.92156863209999995" blue="0.94509804249999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" red="0.0039215688589999999" green="0.36078432199999999" blue="0.56862747670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </tabBar>
                     <connections>
                         <segue destination="u3B-Kn-DUq" kind="relationship" relationship="viewControllers" id="y0K-8s-40X"/>
