--- a/MC2-Group6/Feature/Timer/TimerPage/View/Timer.storyboard
+++ b/MC2-Group6/Feature/Timer/TimerPage/View/Timer.storyboard
@@ -11,7 +11,7 @@
         <!--Pomodoro-->
         <scene sceneID="zKJ-vS-exb">
             <objects>
-                <viewController storyboardIdentifier="TimerSB" useStoryboardIdentifierAsRestorationIdentifier="YES" id="U0K-e5-S7v" customClass="TimerViewController" customModule="Tiemer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TimerSB" useStoryboardIdentifierAsRestorationIdentifier="YES" id="U0K-e5-S7v" customClass="TimerViewController" customModule="MC2_Group6" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gKD-Ju-lP1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
